fixed some css issues on mobile added to documentation/history

--- a/web/app/css/gudgeon-app.css
+++ b/web/app/css/gudgeon-app.css
@@ -39,7 +39,13 @@
 @media only screen and (max-width: 768px) {
     .maxHeight { }
     .smallCell { }
-    .smallListRow { }
-    .rightCard { }
-    .leftCard { }
+    .smallListRow {
+        flex-direction: column !important;
+    }
+    .rightCard {
+        text-align: unset !important;
+    }
+    .leftCard {
+        text-align: unset !important;
+    }
 }
